<resources>
    <string name="app_name">Composition</string>
    <string name="tv_welcome_title">Состав числа</string>
    <string name="tv_welcome_rules">Правила игры: перед Вами будет три фигуры - две снизу и одна сверху. В двух из них будут числа.
        \nНеобходимо, что бы сумма чисел из нижних двух фигур была равна числу в верхней фигуре. Для этого нужно выбрать недостающее число из вариантов ниже.
        \n\nПример: в верхнем круге число 7. В одной из нижних фигур знак вопроса, в другой - число 4.
        Значит на месте вопроса должно быть число 3. Его и выбираем из предложенных вариантов</string>
    <string name="bt_understand">Понятно</string>
    <string name="tv_level_title">Выберите уровень сложности:</string>
    <string name="bt_level_easy">Легкий</string>
    <string name="bt_level_normal">Средний</string>
    <string name="bt_level_hard">Тяжелый</string>
    <string name="bt_level_test">Тестовый</string>
    <string name="tv_progress_bar_game">Правильных ответов %s (минимум %s)</string>
    <string name="bt_again">Попробовать снова</string>
    <string name="tv_result_needed_answers">Необходимо: %s</string>
    <string name="tv_result_counted_answers">Правильных ответов: %s</string>
    <string name="tv_result_needed_percent">Необходимый процент: %s</string>
    <string name="tv_result_counted_percent">Процент правильных ответов: %s</string>
    <string name="tv_game_unknown_number">\?</string>
    <string name="toast_right">Right!</string>
    <string name="toast_wrong">Wrong!</string>
    <string name="tv_progress_bar_subscribe">Процент правильных ответов</string>
</resources>