<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".presentation.fragment.ChooseLevelFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_level_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_level_title"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_level_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bt_level_test" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/bt_level_easy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_level_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/bt_level_normal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/bt_level_hard" />

</LinearLayout>